# colour-icon-repro

./: .bazelrc  BUILD.bazel  WORKSPACE  jest.js  multiply.test.js  package.json
